CI/CD: add GitHub Actions (tests + GHCR), prod compose; docs: update README, env example; gitignore: track style docs

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,11 @@ PERSONA_ROLE=Product Builder
 
 # Flask Configuration
 FLASK_SECRET_KEY=change-this-in-production
+
+# Personalization & Interests
+INTERESTS=ai,llm,product,saas,startup,founder,ux,devtools,infra
+ABOUT_ME_PATH=./data/about_me.md
+POST_STYLE_FILE=./data/style.md
+COMMENT_STYLE_FILE=./data/style_comment.md
+AB_TESTING=true
+MAX_POST_LENGTH=1200
