--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ flask==3.0.0
 apscheduler==3.10.4
 httpx==0.25.2
 python-dotenv==1.0.0
-google-generativeai==0.3.2
+google-generativeai>=0.8.0
 pydantic==2.5.2
 pytz==2023.3
 langdetect==1.0.9
